Rename to SomeSerial from HardOrSoftSerial

--- a/library.properties
+++ b/library.properties
@@ -1,9 +1,9 @@
-name=HardOrSoftSerial
+name=SomeSerial
 version=1.0.0
 author=Asuki Kono
 maintainer=Asuki Kono
 sentence=A library to wrap HardwareSerial or SoftwareSerial.
 paragraph=It can call serial methods even if it is HardwareSerial or SoftwareSerial.
 category=Communication
-url=https://github.com/asukiaaa/HardOrSoftSerial
+url=https://github.com/asukiaaa/SomeSerial
 architectures=*
