Support USBAPI Serial_

--- a/library.properties
+++ b/library.properties
@@ -2,8 +2,8 @@ name=SomeSerial
 version=1.0.0
 author=Asuki Kono
 maintainer=Asuki Kono
-sentence=A library to wrap HardwareSerial or SoftwareSerial.
-paragraph=It can call serial methods even if it is HardwareSerial or SoftwareSerial.
+sentence=A library to wrap HardwareSerial, SoftwareSerial or USBAPI Serial_.
+paragraph=It can call streaming methods even if it is HardwareSerial, SoftwareSerial or USBAPI Serial_.
 category=Communication
 url=https://github.com/asukiaaa/SomeSerial
 architectures=*
